@@ -1,10 +1,16 @@
 #!/bin/sh
 set -u
 
+# Use absolute paths so -Dconfig.file and logback work when CWD is not / (e.g. some K8s/compose
+# setups set workdir to the app root; relative datahub-frontend/conf/... would not exist).
+DATAHUB_HOME="${DATAHUB_HOME:-/datahub-frontend}"
+
 PROMETHEUS_AGENT=""
 if [[ ${ENABLE_PROMETHEUS:-false} == true ]]; then
-  PROMETHEUS_AGENT="-javaagent:jmx_prometheus_javaagent.jar=4318:/datahub-frontend/client-prometheus-config.yaml"
+  PROMETHEUS_AGENT="-javaagent:jmx_prometheus_javaagent.jar=4318:${DATAHUB_HOME}/client-prometheus-config.yaml"
 fi
+
+export MANAGEMENT_SERVER_PORT="${MANAGEMENT_SERVER_PORT:-4319}"
 
 OTEL_AGENT=""
 if [[ ${ENABLE_OTEL:-false} == true ]]; then
@@ -41,20 +47,18 @@ if [[ ! -z ${HTTP_NON_PROXY_HOSTS:-} ]]; then
   NO_PROXY="-Dhttp.nonProxyHosts='$HTTP_NON_PROXY_HOSTS'"
 fi
 
-# make sure there is no whitespace at the beginning and the end of 
+# make sure there is no whitespace at the beginning and the end of
 # this string
 export JAVA_OPTS="${JAVA_MEMORY_OPTS:-"-Xms512m -Xmx1024m"} \
    -Dhttp.port=$SERVER_PORT \
-   -Dconfig.file=datahub-frontend/conf/application.conf \
-   -Djava.security.auth.login.config=datahub-frontend/conf/jaas.conf \
-   -Dlogback.configurationFile=datahub-frontend/conf/logback.xml \
+   -Dconfig.file=${DATAHUB_HOME}/conf/application.conf \
+   -Djava.security.auth.login.config=${DATAHUB_HOME}/conf/jaas.conf \
+   -Dlogback.configurationFile=${DATAHUB_HOME}/conf/logback.xml \
    -Dlogback.debug=false \
-   --add-opens java.base/java.lang=ALL-UNNAMED \
-   --add-opens=java.base/java.util=ALL-UNNAMED \
    ${PROMETHEUS_AGENT:-} ${OTEL_AGENT:-} \
    ${TRUSTSTORE_FILE:-} ${TRUSTSTORE_TYPE:-} ${TRUSTSTORE_PASSWORD:-} \
    ${HTTP_PROXY:-} ${HTTPS_PROXY:-} ${NO_PROXY:-} \
    -Dpidfile.path=/dev/null"
 
-exec ./datahub-frontend/bin/datahub-frontend
+exec "${DATAHUB_HOME}/bin/datahub-frontend"
 
